--- a/src/classes.html
+++ b/src/classes.html
@@ -8,22 +8,20 @@
 
     <div class="page__body">
 
-        <div class="classes-details">
+        <section class="classes-details">
 
-            <div class="classes-detail classes-detail__bioLab">
+            <article class="classes-detail classes-detail__bioLab">
                 <div class="classes-img classes-img__bioLab"></div>
                 <a class="classes-detail__title">Introductory Biology Lab</a>
                 <h2 class="classes-detail__subtitle">BIO-1041-OL</h2>
                 <p class="classes-detail__info">2017-2018 - Summer Semester</p>
-                <img class="classes-detail__icon" src="images/icon_Notification.png" height=1 0px>
-            </div>
+            </article>
 
             <div class="classes-detail classes-detail__bio">
                 <div class="classes-img classes-img__bio"></div>
                 <a class="classes-detail__title">Introductory Biology</a>
                 <h2 class="classes-detail__subtitle">BIO-1043-OL</h2>
                 <p class="classes-detail__info">2017-2018 - Summer Semester</p>
-                <img class="classes-detail__icon" src="images/icon_Notification.png" height=1 0px>
             </div>
 
             <div class="classes-detail classes-detail__publicSpeaking">
@@ -31,7 +29,6 @@
                 <a class="classes-detail__title">Public Speaking</a>
                 <h2 class="classes-detail__subtitle">COM-1113-OL</h2>
                 <p class="classes-detail__info">2017-2018 - Summer Semester</p>
-                <img class="classes-detail__icon" src="images/icon_Notification.png" height=1 0px>
             </div>
 
             <div class="classes-detail classes-detail__freedoms">
@@ -39,36 +36,67 @@
                 <a class="classes-detail__title">Freedom in American Society</a>
                 <h2 class="classes-detail__subtitle">PLS-3003-OL</h2>
                 <p class="classes-detail__info">2017-2018 - Summer Semester</p>
-                <img class="classes-detail__icon" src="images/icon_Notification.png" height=1 0px>
             </div>
 
-        </div> <!--classes-details-->
+        </section> <!--classes-details-->
 
-        <div class="todo-details">
+        <section class="todo-details">
 
-            <h2 class="page-subtitle">Assignments</h2>
+            <h2 class="todo-details__subtitle">Assignments</h2>
 
-            <div class="todo-detail todo__current">
+            <div class="todo-detail todo-detail--current">
                 <a href="#" class="todo-detail__title">Turn in Faith Talk #2</a>
                 <p class="todo-detail__info">Public Speaking</p>
                 <p class="todo-detail__info">May 17 at 12:00pm</p>
             </div>
-            <div class="todo-detail todo__current">
+            <div class="todo-detail todo-detail--current">
                 <a href="#" class="todo-detail__title">Take 2.15 Quiz #2</a>
                 <p class="todo-detail__info">Freedom in American Society</p>
                 <p class="todo-detail__info">May 20 at 11:59pm</p>
             </div>
-            <div class="todo-detail todo__current">
+            <div class="todo-detail todo-detail--current">
                 <a href="#" class="todo-detail__title">Take Topic Selection</a>
                 <p class="todo-detail__info">Public Speaking</p>
                 <p class="todo-detail__info">May 20 at 11:59pm</p>
             </div>
-            <div class="todo-detail todo__current">
+            <div class="todo-detail todo-detail--current">
                 <a href="#" class="todo-detail__title">Take Exam #2</a>
                 <p class="todo-detail__info">Freedom in American Society</p>
                 <p class="todo-detail__info">May 20 at 11:59pm</p>
             </div>
-            <div class="todo-detail todo__future">
+            <div class="todo-detail todo-detail--future">
+                <a href="#" class="todo-detail__title">Take Informative Speaking Quiz</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">May 20 at 11:59pm</p>
+            </div>
+
+            <a href="#" class="todo-details__title">
+                <em>View More...</em>
+            </a>
+
+            <h2 class="todo-details__subtitle">Coming Up</h2>
+
+            <div class="todo-detail todo-detail--current">
+                <a href="#" class="todo-detail__title">Turn in Faith Talk #2</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">May 17 at 12:00pm</p>
+            </div>
+            <div class="todo-detail todo-detail--current">
+                <a href="#" class="todo-detail__title">Take 2.15 Quiz #2</a>
+                <p class="todo-detail__info">Freedom in American Society</p>
+                <p class="todo-detail__info">May 20 at 11:59pm</p>
+            </div>
+            <div class="todo-detail todo-detail--current">
+                <a href="#" class="todo-detail__title">Take Topic Selection</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">May 20 at 11:59pm</p>
+            </div>
+            <div class="todo-detail todo-detail--current">
+                <a href="#" class="todo-detail__title">Take Exam #2</a>
+                <p class="todo-detail__info">Freedom in American Society</p>
+                <p class="todo-detail__info">May 20 at 11:59pm</p>
+            </div>
+            <div class="todo-detail todo-detail--future">
                 <a href="#" class="todo-detail__title">Take Informative Speaking Quiz</a>
                 <p class="todo-detail__info">Public Speaking</p>
                 <p class="todo-detail__info">May 20 at 11:59pm</p>
@@ -78,47 +106,15 @@
                 <em>View More...</em>
             </a>
 
-            <h2 class="page-subtitle">Coming Up</h2>
+            <h2 class="todo-details__subtitle">Recent Feedback</h2>
 
-            <div class="todo-detail todo__current">
-                <a href="#" class="todo-detail__title">Turn in Faith Talk #2</a>
-                <p class="todo-detail__info">Public Speaking</p>
-                <p class="todo-detail__info">May 17 at 12:00pm</p>
-            </div>
-            <div class="todo-detail todo__current">
-                <a href="#" class="todo-detail__title">Take 2.15 Quiz #2</a>
-                <p class="todo-detail__info">Freedom in American Society</p>
-                <p class="todo-detail__info">May 20 at 11:59pm</p>
-            </div>
-            <div class="todo-detail todo__current">
-                <a href="#" class="todo-detail__title">Take Topic Selection</a>
-                <p class="todo-detail__info">Public Speaking</p>
-                <p class="todo-detail__info">May 20 at 11:59pm</p>
-            </div>
-            <div class="todo-detail todo__current">
-                <a href="#" class="todo-detail__title">Take Exam #2</a>
-                <p class="todo-detail__info">Freedom in American Society</p>
-                <p class="todo-detail__info">May 20 at 11:59pm</p>
-            </div>
-            <div class="todo-detail todo__future">
+            <div class="todo-detail todo-detail--future">
                 <a href="#" class="todo-detail__title">Take Informative Speaking Quiz</a>
                 <p class="todo-detail__info">Public Speaking</p>
                 <p class="todo-detail__info">May 20 at 11:59pm</p>
             </div>
 
-            <a href="#" class="todo-detail todo-detail__title">
-                <em>View More...</em>
-            </a>
-
-            <h2 class="page-subtitle">Recent Feedback</h2>
-
-            <div class="todo-detail todo__future">
-                <a href="#" class="todo-detail__title">Take Informative Speaking Quiz</a>
-                <p class="todo-detail__info">Public Speaking</p>
-                <p class="todo-detail__info">May 20 at 11:59pm</p>
-            </div>
-
-        </div><!--todo-details-->
+        </section><!--todo-details-->
 
     </div> <!--page body-->
 
