--- a/src/inbox.html
+++ b/src/inbox.html
@@ -1,10 +1,18 @@
 @@include('./partials/header.html')
 
-<main class="body">
-    <header class="page-header">
+<main class="page">
+    <header class="page__header">
         <h1 class="page-title">Inbox</h1>
-        <hr>
     </header>
+    <div class="page__body">
+
+        <div class="page__details">
+            <div class="page__desc">
+                <h1 class="inbox__message">Coming Soon!</h1>
+            </div>
+        </div>
+
+    </div>
 </main>
 
 @@include('./partials/footer.html')
