--- a/src/tracker.html
+++ b/src/tracker.html
@@ -14,33 +14,33 @@
             <div class="tracker">
 
                 <h2 class="tracker__title">Student Info: </h2>
-                <h3 class="tracker__subtitle">Classification</h3>
-                <p class="tracker__data">Junior</p>
+                <h3 class="tracker__subtitle">Classification - </h3>
+                <p class="tracker__data">Senior</p>
 
-                <h3 class="tracker__subtitle">Credits Needed</h3>
-                <p class="tracker__data">A lot</p>
+                <h3 class="tracker__subtitle">Credits Needed - </h3>
+                <p class="tracker__data">40</p>
 
-                <h3 class="tracker__subtitle">Credits Earned</h3>
-                <p class="tracker__data">Not enough</p>
+                <h3 class="tracker__subtitle">Credits Earned - </h3>
+                <p class="tracker__data">102</p>
 
                 <h3 class="tracker__subtitle">GPA</h3>
                 <p class="tracker__data">4.0</p>
 
-                <h3 class="tracker__subtitle">Major Requirements Met</h3>
+                <h3 class="tracker__subtitle">Major Requirements Met - </h3>
                 <p class="tracker__data">No</p>
 
-                <h3 class="tracker__subtitle">Minor Requirements Met</h3>
+                <h3 class="tracker__subtitle">Minor Requirements Met - </h3>
                 <p class="tracker__data">No</p>
 
-                <h3 class="tracker__subtitle">Gen Ed Requirements Met</h3>
+                <h3 class="tracker__subtitle">Gen Ed Requirements Met - </h3>
                 <p class="tracker__data">Yes</p>
 
-                <h3 class="tracker__subtitle">Degree in Process</h3>
+                <h3 class="tracker__subtitle">Degree in Process - </h3>
                 <p class="tracker__data">Bachelor of Science</p>
 
-                <h3 class="tracker__subtitle">Links</h3>
-                <a href="#" class="tracker__data--link">Advising Worksheet</a>
-                <a href="#" class="tracker__data--link">Graduation Application</a>
+                <h3 class="tracker__subtitle">Links - </h3>
+                <a href="https://my.pba.edu/ICS/Applications/CRM/Reports/etaeaonlkylaoxbgcq2ivzcn12_54_58_PM_AdvisingWorksheet.pdf" target="blank" class="tracker__data--link">Advising Worksheet</a>
+                <a href="https://my.pba.edu/ics/staticpages/forms/registrar/application-graduation.aspx" target="blank" class="tracker__data--link">Graduation Application</a>
 
             </div>
             <!-- /tracker -->
@@ -160,7 +160,22 @@
                         <tr>
                             <th class="row__name">CSC-3403 Operating Systems</th>
                             <th class="row__term">2017-2018 Spring Semester</th>
-                            <th class="row__score">B+</th>
+                            <th class="row__score">A-</th>
+                        </tr>
+                        <tr>
+                            <th class="row__name">CSC 3413 Computer Networking</th>
+                            <th class="row__term">2017-2018 Spring Semester</th>
+                            <th class="row__score">B</th>
+                        </tr>
+                        <tr>
+                            <th class="row__name">CSC 3503 Graphics Programming</th>
+                            <th class="row__term">2017-2018 Spring Semester</th>
+                            <th class="row__score">B-</th>
+                        </tr>
+                        <tr>
+                            <th class="row__name">MAT 1863 Trigonometry & Analytical Geometry</th>
+                            <th class="row__term">2017-2018 Spring Semester</th>
+                            <th class="row__score">B-</th>
                         </tr>
                     </table>
                 </div>
@@ -215,3 +230,5 @@
     <!-- /page__body -->
 </main>
 <!-- /page -->
+
+@@include('./partials/footer.html')
