Border changes to red if the field is empty

--- a/src/todo.html
+++ b/src/todo.html
@@ -58,147 +58,55 @@
 
             </div>
             <!--filter-->
-
+            <!-- maybe change this to results--wrapper -->
             <div class="result">
 
-                <div class="result__present">
+                <div class="results present">
 
                     <h2 class="result__title">Present</h2>
 
-                    <div class="result__details">
+                    <div id="present" class="result__details">
 
-                        <div class="todo-detail">
+                        <!-- <div class="todo-detail">
                             <a href="#" class="todo-detail__title">Turn in 6.7 Assignment | Law</a>
                             <p class="todo-detail__info">Freedom in American Society</p>
                             <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
+                        </div> -->
                         <!--/todo-detail-->
 
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Persuasive Claims</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-                        <!--/todo-detail-->
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Take 6.9 Quiz 6</a>
-                            <p class="todo-detail__info">Freedom in American Society</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-                        <!--/todo-detail-->
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-                        <!--/todo-detail-->
                     </div>
                     <!--result__details-->
                 </div>
                 <!--result__present-->
 
-                <div class="result__future">
+                <div class="results future">
 
                     <h2 class="result__title">Future</h2>
 
-                    <div class="result__details">
+                    <div id="future" class="result__details">
 
-                        <div class="todo-detail">
+                        <!-- <div class="todo-detail">
                             <a href="#" class="todo-detail__title">Turn in 6.7 Assignment | Law</a>
                             <p class="todo-detail__info">Freedom in American Society</p>
                             <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Persuasive Claims</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Take 6.9 Quiz 6</a>
-                            <p class="todo-detail__info">Freedom in American Society</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
+                        </div> -->
 
                     </div>
                     <!--result__details-->
                 </div>
                 <!--result__future-->
 
-                <div class="result__past">
+                <div class="results past">
 
                     <h2 class="result__title">Past</h2>
 
-                    <div class="result__details">
+                    <div id="past" class="result__details">
 
-                        <div class="todo-detail">
+                        <!-- <div class="todo-detail">
                             <a href="#" class="todo-detail__title">Turn in 6.7 Assignment | Law</a>
                             <p class="todo-detail__info">Freedom in American Society</p>
                             <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Persuasive Claims</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Take 6.9 Quiz 6</a>
-                            <p class="todo-detail__info">Freedom in American Society</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
-
-                        <div class="todo-detail">
-                            <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
-                            <p class="todo-detail__info">Public Speaking</p>
-                            <p class="todo-detail__info">June 17 at 11:59pm</p>
-                        </div>
+                        </div> -->
 
                     </div>
                     <!--result__past-->
@@ -214,5 +122,7 @@
     <!--page__body-->
 
 </main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.29.0/date_fns.min.js"></script>
+<script src="scripts/todo.js"></script>
 
 @@include('./partials/footer.html')
