--- a/src/todo_input.html
+++ b/src/todo_input.html
@@ -12,10 +12,10 @@
                 <div id="fail" class="alert error hide">Something went wrong</div>
 
                 <label for="todoTitle" class="form__title">Assignment Title:</label>
-                <input id="todoTitle" class="form__input" type="text" name="title">
+                <input id="todoTitle" required class="form__input" type="text" name="title">
 
                 <label for="todoDesc" class="form__title">Description:</label>
-                <input id="todoDesc" class="form__input" type="text" name="desc">
+                <input id="todoDesc" required class="form__input" type="text" name="desc">
 
                 <label for="todoCategory" class="form__title">Category:</label>
                 <select id="todoCategory" name="category" class="form__input">
