--- a/src/classes_input.html
+++ b/src/classes_input.html
@@ -8,8 +8,12 @@
         <form>
             <div class="classes">
 
-                <label for="classCategory" class="form__title">Category:</label>
+                <div id="success" class="alert success hide">SAVED!!</div>
+                <div id="fail" class="alert error hide">Something went wrong</div>
+
+                <label for="classCategory" class="form__title">* Category:</label>
                 <select id="classCategory" name="category" class="form__input">
+                    <option value="select">Select one</option>
                     <option value="major">Major</option>
                     <option value="minor">Minor</option>
                     <option value="genEd">Gen Ed</option>
@@ -21,10 +25,10 @@
                 <label for="classDesc" class="form__title">Description:</label>
                 <input id="classDesc" class="form__input" type="text" name="desc">
 
-                <label for="classTitle" class="form__title">Title:</label>
+                <label for="classTitle" class="form__title">* Title:</label>
                 <input id="classTitle" class="form__input" type="text" name="title">
 
-                <label for="classCredit" class="form__title">Credits:</label>
+                <label for="classCredit" class="form__title">* Credits:</label>
                 <input id="classCredit" class="form__input" type="text" name="credit">
 
                 <button type="submit" value="Submit" class="btn">Submit</button>
